--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-pillow-theme"]
-	path = themes/hugo-pillow-theme
-	url = https://github.com/pillowbeast/hugo-pillow-theme.git
+[submodule "themes/hugo-pillow"]
+	path = themes/hugo-pillow
+	url = https://github.com/pillowbeast/hugo-pillow.git
