--- a/.github/workflows/update-theme.yml
+++ b/.github/workflows/update-theme.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main # Trigger when changes are pushed to the main branch
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   update-submodule:
