PAT for workflow chaining

--- a/.github/workflows/update-theme.yml
+++ b/.github/workflows/update-theme.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Push changes to ExampleSite
       run: git push origin exampleSite
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
