--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Hugo Pillow Theme"
+name = "Pillow"
 author = "Yannik Werner"
 description = "A modern and minimal Hugo theme for blogs and portfolios with a collection of projects, recipes, books, a CV and blog entries."
 version = "1.0.2"
